2023-06-17  Andreas Scherer  <https://ascherer.github.io>

	* Makefile.in: Integrate cwebdir/ctwill.test; run reautoconf.

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.
	https://tug.org/pipermail/tex-k/2023-March/003911.html

2023-02-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* tests/fn-generate.perl:
	Avoid errors on parallel test processing.
	Report from Ken Brown.

2023-02-13  Karl Berry  <karl@freefriends.org>

	* enctexdir/enctex-pdftex.ch: move "\special shipout"
	change here, from enctex2.ch, so it is not applied to tex (which
	doesn't have it).

2023-02-12  Phelype Oleinik <phe.h.o1@gmail.com>
        and Karl Berry  <karl@freefriends.org>

	* enctexdir/enctex2.ch: make parallel change for ``late''
	\special shipout. This code is what avoids the invalid
	write_stream(tail):=null assignment in the original code.
	See pdftex.web (Implement \.{\\special}) for more.

2023-01-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.in, ac/web2c.ac (ptex, uptex):
	Revert options --enable-(u)ptex(-synctex) for configure.
	By default, we do not build binaries of (u)pTeX (ptex, uptex)
	and we use alias of e-upTeX (eptex, euptex) for them.
	https://github.com/texjporg/tex-jp-build/issues/32

2023-01-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, ac/web2c.ac (ptex, uptex):
	Remove binaries of (u)pTeX (ptex, uptex). Now we use alias
	of e-upTeX (eptex, euptex) for (u)pTeX (ptex, uptex).
	https://github.com/texjporg/tex-jp-build/issues/32

2023-01-08  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: C++ has removed 'register' storage class.

2022-12-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl, tests/fn-{utf8,euc,sjis}.txt,
	Makefile.in:
	Tests for file names with wide characters & {pdf,Xe,p,up}TeX.

2022-09-28  Karl Berry  <karl@freefriends.org>
