@@ -1,3 +1,8 @@
+2023-06-18  Karl Berry  <karl@freefriends.org>
+
+	* am/cweb.am (dist_bin_SCRIPTS): new script cwebdir/ctwill-proofsort.
+	(TESTS): rearrange to keep all info for a given test together.
+
 2023-06-17  Andreas Scherer  <https://ascherer.github.io>
 
 	* Makefile.in: Integrate cwebdir/ctwill.test; run reautoconf.
